force-app/main/default/objects/Billing__c/fields/Billing_Period_End__c.field-meta.xml
<CustomField>
    <fullName>Billing_Period_End__c</fullName>
    <label>Billing Period Ends in the project</label>
    <type>Date</type>
</CustomField>