force-app/main/default/objects/Billing__c/fields/Reconciliation_Status__c.field-meta.xml
<CustomField>
    <fullName>Reconciliation_Status__c</fullName>
    <label>Reconciliation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Reconciled</fullName>
            </value>
            <value>
                <fullName>Disputed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>