force-app/main/default/objects/Billing__c/fields/Total_Premium__c.field-meta.xml
<CustomField>
    <fullName>Total_Premium__c</fullName>
    <label>Total Premium</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>